-
Bug
-
Resolution: Done
-
P2: Important
-
6.x
-
None
-
Visual Studio v17.2.6; cl.exe 19.32.31332; qtbase commit 57be602fde
-
-
51acd47082 (qt/qtbase/dev) 69df10ace6 (qt/qtbase/6.4) 69df10ace6 (qt/tqtc-qtbase/6.4)
Configured with:
..\qt_git\configure.bat -release -shared -developer-build -c++std c++2b -submodules qtbase,qtdeclarative -- -DWARNINGS_ARE_ERRORS=OFF
The error:
[2489/13220] Building CXX object qtbase\tests\auto\corelib\global\qxp\function_ref\CMakeFiles\tst_qxp_function_ref.dir\tst_qxp_function_ref.cpp.obj FAILED: qtbase/tests/auto/corelib/global/qxp/function_ref/CMakeFiles/tst_qxp_function_ref.dir/tst_qxp_function_ref.cpp.obj C:\PROGRA~1\MICROS~2\2022\COMMUN~1\VC\Tools\MSVC\1432~1.313\bin\Hostx64\x64\cl.exe /nologo /TP -DQT_CORE_LIB -DQT_LEAN_HEADERS=1 -DQT_NO_DEBUG -DQT_NO_JAVA_STYLE_ITERATORS -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_STRICT_QLIST_ITERATORS -DQT_TESTCASE_BUILDDIR=\"C:/qt_build/qtbase/tests/auto/corelib/global/qxp/function_ref\" -DQT_TESTCASE_SOURCEDIR=\"C:/qt_git/qtbase/tests/auto/corelib/global/qxp/function_ref\" -DQT_TESTLIB_LIB -DUNICODE -DWIN32 -DWIN64 -D_CRT_SECURE_NO_WARNINGS -D_ENABLE_EXTENDED_ALIGNED_STORAGE -D_UNICODE -D_WIN64 -IC:\qt_build\qtbase\tests\auto\corelib\global\qxp\function_ref\tst_qxp_function_ref_autogen\include -IC:\qt_git\qtbase\tests\auto\corelib\global\qxp\function_ref -IC:\qt_build\qtbase\tests\auto\corelib\global\qxp\function_ref -IC:\qt_build\qtbase\include -IC:\qt_build\qtbase\include\QtCore -IC:\qt_git\qtbase\mkspecs\win32-msvc -IC:\qt_build\qtbase\include\QtTest /DWIN32 /D_WINDOWS /DNDEBUG -O2 -MD /W3 /EHsc /d2FH4 -Zc:__cplusplus -permissive- -utf-8 -FS -Zc:rvalueCast -Zc:inline -Zc:strictStrings -Zc:throwingNew -Zc:referenceBinding -Zc:externConstexpr -Zc:wchar_t -bigobj -guard:cf -Gw -std:c++latest /showIncludes /Foqtbase\tests\auto\corelib\global\qxp\function_ref\CMakeFiles\tst_qxp_function_ref.dir\tst_qxp_function_ref.cpp.obj /Fdqtbase\tests\auto\corelib\global\qxp\function_ref\CMakeFiles\tst_qxp_function_ref.dir\ /FS -c C:\qt_git\qtbase\tests\auto\corelib\global\qxp\function_ref\tst_qxp_function_ref.cpp C:\qt_git\qtbase\tests\auto\corelib\global\qxp\function_ref\tst_qxp_function_ref.cpp(161): error C2127: 'lambda': illegal initialization of 'constinit' entity with a non-constant expression [2498/13220] Building CXX object qtbase\tests\auto\corelib\kernel\qmetatype\CMakeFiles\tst_qmetatype.dir\tst_qmetatype3.cpp.obj ninja: build stopped: subcommand failed.
| For Gerrit Dashboard: QTBUG-105234 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 423835,5 | Disable constinit for MSVC compilers | dev | qt/qtbase | Status: MERGED | +2 | 0 |
| 424865,2 | Disable constinit for MSVC compilers | 6.4 | qt/qtbase | Status: MERGED | +2 | 0 |