Disable constinit for MSVC compilers

https://developercommunity.visualstudio.com/t/C:-constinit-for-an-optional-fails-if-/1406069
does not only affect constinit thread_local but also constinit in
general on MSVC compilers when C++20 is being used. So disable the
feature for these compilers in general for now.

This commit amends d9531593a248e19f7da7862b2870a6af2f413e75

Fixes: QTBUG-105234
Change-Id: I1855f0857d85487895460fc7c56675fb864bfa73
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>
(cherry picked from commit 51acd4708296de4392232271b3d6c5d067bdffad)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>