src/corelib/global/qglobal.h
@@ -1265,10 +1265,11 @@ constexpr std::underlying_type_t<Enum> qToUnderlying(Enum e) noexcept
 #endif
 
 #ifdef __cpp_constinit
-# define Q_CONSTINIT constinit
 # if defined(Q_CC_MSVC) && !defined(Q_CC_CLANG)
    // https://developercommunity.visualstudio.com/t/C:-constinit-for-an-optional-fails-if-/1406069
-#  define Q_THREAD_LOCAL_CONSTINIT
+#  define Q_CONSTINIT
+# else
+#  define Q_CONSTINIT constinit
 # endif
 #elif defined(__has_cpp_attribute) && __has_cpp_attribute(clang::require_constant_initialization)
 # define Q_CONSTINIT [[clang::require_constant_initialization]]
@@ -1276,10 +1277,6 @@ constexpr std::underlying_type_t<Enum> qToUnderlying(Enum e) noexcept
 # define Q_CONSTINIT __constinit
 #else
 # define Q_CONSTINIT
-#endif
-
-#ifndef Q_THREAD_LOCAL_CONSTINIT
-# define Q_THREAD_LOCAL_CONSTINIT Q_CONSTINIT
 #endif
 
 template <typename T> inline T *qGetPtrHelper(T *ptr) noexcept { return ptr; }
